# talkbank-tools

./: CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md  flaky-tests.toml  openapi.json  pyproject.toml  pytest.ini
crates/batchalign-app/: CLAUDE.md  Cargo.toml
crates/batchalign-app/src/: benchmark.rs  compare.rs  coref.rs  host_memory.rs  lib.rs  provenance.rs  server_backend.rs  temporal_backend.rs  translate.rs  utseg.rs
crates/batchalign-app/src/command_model/: catalog.rs
crates/batchalign-app/src/execution/: coref.rs  kernel.rs  text_io.rs  translate.rs  utseg.rs  worker_gateway.rs
crates/batchalign-app/src/execution/morphotag/: input.rs  mod.rs  progress.rs  window_policy.rs
crates/batchalign-app/src/fa/: incremental.rs  mod.rs  transport.rs
crates/batchalign-app/src/host_facts/: test_helpers.rs
crates/batchalign-app/src/morphosyntax/: batch.rs  dispatcher.rs  mod.rs  outcomes.rs  saturation_tests.rs  worker.rs
crates/batchalign-app/src/pipeline/: morphosyntax.rs  text_infer.rs  transcribe.rs
crates/batchalign-app/src/recipe_runner/: catalog.rs  runtime.rs
crates/batchalign-app/src/revai/: asr.rs  mod.rs  preflight.rs
crates/batchalign-app/src/runner/: debug_dumper.rs  execution.rs  routing.rs
crates/batchalign-app/src/runner/dispatch/: audio_output.rs  audio_task.rs  benchmark_pipeline.rs  fa_pipeline.rs  infer_batched.rs  options.rs  plan.rs  utr.rs
crates/batchalign-app/src/runner/util/: media.rs
crates/batchalign-app/src/staging/: prepare.rs
crates/batchalign-app/src/store/: registry.rs
crates/batchalign-app/src/store/queries/: file_state.rs
crates/batchalign-app/src/transcribe/: asr_output.rs  mod.rs  types.rs
crates/batchalign-app/src/types/: mod.rs  options.rs  params.rs  request.rs  results.rs
crates/batchalign-app/src/types/config/: resolve.rs  server.rs  tests.rs
crates/batchalign-app/src/worker/: asr_result_v2.rs  fa_result_v2.rs  memory_guard.rs  request_builder_v2.rs
crates/batchalign-app/src/worker/handle/: mod.rs  spawn.rs
crates/batchalign-app/src/worker/pool/: checkout.rs  mod.rs
crates/batchalign-app/tests/: command_family_smoke.rs  gpu_concurrent_dispatch.rs  integration.rs  json_compat.rs  ml_golden.rs  stress.rs  turmoil_net.rs  worker_failure_paths.rs  worker_integration.rs  worker_protocol_matrix.rs  worker_routing_and_lifecycle.rs  workflow_helpers.rs
crates/batchalign-app/tests/common/: direct_job_client.rs  drift_assertions.rs  mod.rs  paths_mode.rs  server_job_client.rs
crates/batchalign-app/tests/ml_golden/: audio_helpers.rs  parity_helpers.rs
crates/batchalign-app/tests/ml_golden/align/: direct_behavior.rs  drift_integration.rs  drift_runner.rs  error_paths.rs  golden.rs  helpers.rs  multilingual.rs  options.rs  server_behavior.rs
crates/batchalign-app/tests/ml_golden/avqi/: golden.rs  helpers.rs  server_behavior.rs
crates/batchalign-app/tests/ml_golden/benchmark/: golden.rs
crates/batchalign-app/tests/ml_golden/compare/: error_paths.rs  golden.rs
crates/batchalign-app/tests/snapshots/: json_compat__job_info.snap  json_compat__job_submission_minimal.snap  json_compat__job_submission_paths_mode.snap
crates/batchalign-chat-ops/: CLAUDE.md  Cargo.toml
crates/batchalign-chat-ops/proptest-regressions/: wer_conform.txt
crates/batchalign-chat-ops/src/: benchmark.rs  build_chat.rs  compare.rs  constituency.rs  coref.rs  decisions.rs  extract.rs  indices.rs  inject.rs  lib.rs  merge_abbrev.rs  parse.rs  serialize.rs  text_types.rs  translate.rs  utseg.rs  utseg_compute.rs  validate.rs  wer_conform.rs
crates/batchalign-chat-ops/src/asr_postprocess/: mod.rs
crates/batchalign-chat-ops/src/diff/: mod.rs
crates/batchalign-chat-ops/src/dp_align/: mod.rs
crates/batchalign-chat-ops/src/fa/: COMPOUND_FILLER_ALIGNMENT.md  alignment.rs  grouping.rs  mod.rs  orchestrate.rs  outcome.rs  repair.rs  rescue_narrow_bullets.rs  review_tiers.rs  tests.rs  utr.rs
crates/batchalign-chat-ops/src/morphosyntax/: inject.rs  mod.rs  outcome.rs  payloads.rs  pos_hints.rs  preprocess.rs  stanza_languages.rs  stanza_raw.rs  tests.rs
crates/batchalign-chat-ops/src/nlp/: dep_rel.rs  lang_en.rs  lang_fr.rs  lang_it.rs  lang_ja.rs  mod.rs  mor_word.rs  types.rs  ud_feats.rs  validation.rs
crates/batchalign-chat-ops/src/retokenize/: mapping.rs  mod.rs  parse_helpers.rs  tests.rs
crates/batchalign-chat-ops/src/tokenizer_realign/: mod.rs
crates/batchalign-chat-ops/tests/: mor_count_parity_reference_corpus.rs
crates/batchalign-cli/: CLAUDE.md  Cargo.toml
crates/batchalign-cli/src/: bench_cmd.rs  client.rs  daemon.rs  doctor_cmd.rs  jobs_cmd.rs  lib.rs  output.rs  progress.rs  replay_cmd.rs  resolve.rs  serve_cmd.rs  worker_cmd.rs
crates/batchalign-cli/src/args/: commands.rs  global_opts.rs  mod.rs  options.rs  tests.rs
crates/batchalign-cli/src/discover/: mod.rs
crates/batchalign-cli/src/dispatch/: helpers.rs  mod.rs  paths.rs  single.rs
crates/batchalign-cli/src/eval_cmd/: mod.rs
crates/batchalign-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/batchalign-cli/tests/: ci_checks.rs  cli.rs  command_matrix.rs  command_surface_manifest.rs  commands.rs
crates/batchalign-cli/tests/common/: mod.rs
crates/talkbank-transform/: Cargo.toml
crates/talkbank-transform/src/: adjudication.rs  build_chat.rs  compare.rs  coref.rs  decisions.rs  dependent_tiers.rs  extract.rs  inject.rs  lib.rs  morphosyntax.rs  parse.rs  retokenize.rs  sanity_scan.rs  transcript_merge.rs  translate.rs  utseg.rs  validate.rs
crates/talkbank-transform/src/asr_postprocess/: asr_types.rs  cantonese.rs  cleanup.rs  compounds.rs  mod.rs  num2text.rs  ordinal_year_eng.rs  registry.rs  snapshot.rs  tests.rs
crates/talkbank-transform/src/morphosyntax/: gra_validate.rs  injection.rs  sentence_mapping.rs
crates/talkbank-transform/src/speaker_id/: apply.rs  error.rs  identify.rs  mapping.rs  mod.rs  override_file.rs  types.rs
crates/talkbank-transform/src/xml/: word.rs
crates/talkbank-transform/tests/: adjudication_tests.rs  book_library_usage_examples.rs  speaker_id_tests.rs  transcript_merge_tests.rs
pyo3/: CLAUDE.md  (+1 more)
(+931 files in other folders)
